--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -29,6 +29,11 @@
 <br>
 <br>
 <br>
+<div th:if=${session.msg}>
+    <div class="alert alert-danger text-center" role="alert" th:text="${session.msg}">
+    </div>
+    <th:block th:text="${#session.removeAttribute('msg')}"></th:block>
+</div>
 <!--Registration form-->
 <div class="container" >
     <div class="row">
